--- a/.github/workflows/see-payload.yaml
+++ b/.github/workflows/see-payload.yaml
@@ -9,5 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: see payload
-      run: cat $GITHUB_EVENT_PATH
+    - name: write payload
+      run: |
+        cat $GITHUB_EVENT_PATH > payload.json
+
+    - name: Upload payload
+      uses: actions/upload-artifact@v1
+      with:
+        name: payload
+        path: payload.json
