--- a/.github/workflows/see-repo-dispatch-payload.yaml
+++ b/.github/workflows/see-repo-dispatch-payload.yaml
@@ -21,6 +21,6 @@ jobs:
     - name: handle repo dispatch payload
       run: |
         cd $GITHUB_WORKSPACE
-        python3 action_files/label_app.py
+        python3 action_files/repo_dispatch_handler.py
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}     
