--- a/.github/workflows/see-repo-dispatch-payload.yaml
+++ b/.github/workflows/see-repo-dispatch-payload.yaml
@@ -9,6 +9,7 @@ jobs:
     steps:
     - name: Write payload
       run: cat $GITHUB_EVENT_PATH > payload.json
+
     - name: Upload payload
       uses: actions/upload-artifact@v1
       with:
@@ -25,4 +26,22 @@ jobs:
         python3 action_files/repo_dispatch_handler.py
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+    - name: Get Runs Using SHA
+      uses: machine-learning-apps/wandb-action@master
+      id: wandb
+      with:
+        PROJECT_NAME: '$WANDB_ENTITY/$WANDB_PROJECT'
+        FILTER_GITHUB_SHA: ${{ steps.rd.outputs.SHA }}
+        BASELINE_TAGS: "['baseline', 'reference']"
+        DISPLAY_METRICS: "['acc', 'loss', 'val_acc', 'val_loss']"
+        WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
+      env:
+        WANDB_ENTITY: ${{ secrets.WANDB_ENTITY }}
+        WANDB_PROJECT: ${{ secrets.WANDB_PROJECT }}
 
+    - name: Upload csv
+      uses: actions/upload-artifact@v1
+      with:
+        name: wandb_report
+        path: $GITHUB_WORKSPACE/wandb_report.csv
