--- a/.github/workflows/see-repo-dispatch-payload.yaml
+++ b/.github/workflows/see-repo-dispatch-payload.yaml
@@ -33,4 +33,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: wandb_report
-        path: $GITHUB_WORKSPACE/wandb_report.csv
+        path: wandb_report.csv
