--- a/.github/workflows/see-repo-dispatch-payload.yaml
+++ b/.github/workflows/see-repo-dispatch-payload.yaml
@@ -1,4 +1,4 @@
-name: See Repository Dispatch Payload
+name: Receive Repository Dispatch Payload
 on: repository_dispatch
 
 jobs:
@@ -24,7 +24,7 @@ jobs:
         PROJECT_NAME: ${{ format('{0}/{1}', secrets.WANDB_ENTITY, secrets.WANDB_PROJECT) }}
         FILTER_GITHUB_SHA: "0c8524ebb794c907446fc97a5fd18f5e4837e242"
         BASELINE_TAGS: "['baseline', 'reference']"
-        DISPLAY_METRICS: "['acc', 'loss', 'val_acc', 'val_loss']"
+        DISPLAY_METRICS: "['accuracy', 'loss', 'val_accuracy', 'val_loss']"
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
         DEBUG: 'true'
 
